add attempt 1 at netcode to sync track number across clients

--- a/Ordered_Custom_Boombox/Ordered_Custom_Boombox.csproj
+++ b/Ordered_Custom_Boombox/Ordered_Custom_Boombox.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Netcode\Sync_track_num.cs" />
     <Compile Include="Patches\Boombox_start_music_patch.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
